fixed sidebar z-index

--- a/portfolio.css
+++ b/portfolio.css
@@ -32,7 +32,7 @@ body {
 	top:40%;
 	width:200px;
 	right:auto;
-	background-color: rgba(0, 0, 0, .7); /*rgba(63, 60, 58, .0); */
+	background-color: #101010; /*rgba(0, 0, 0, .7)rgba(63, 60, 58, .0)*/
 	padding: 10px 0px;
 
 	-o-transition: .2s;
